// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreatorQuestion component CreatorQuestion renders question and description textareas with showQuestion = false 1`] = `
<div
  className="question-hidden"
>
  <div>
    <textarea
      className="question-text"
      onChange={[MockFunction]}
      placeholder="Question Text"
      rows={1}
      type="text"
      value="When September ends"
    />
  </div>
  <div>
    <textarea
      className="description-text"
      onChange={[MockFunction]}
      placeholder="Description Text"
      rows={1}
      type="text"
      value="CANT WAKE UP"
    />
  </div>
</div>
`;

exports[`CreatorQuestion component CreatorQuestion renders question and description textareas with showQuestion = true 1`] = `
<div
  className=""
>
  <div>
    <textarea
      className="question-text"
      onChange={[MockFunction]}
      placeholder="Question Text"
      rows={1}
      type="text"
      value="Wake me up"
    />
  </div>
  <div>
    <textarea
      className="description-text"
      onChange={[MockFunction]}
      placeholder="Description Text"
      rows={1}
      type="text"
      value="Wake me up inside"
    />
  </div>
</div>
`;
